# civ-sim-game

./: CLAUDE.md  README.md
seamless_sim/: .gitignore
seamless_sim/godot/: agent_sim.gdextension  project.godot
seamless_sim/godot/scenes/: Main.tscn
seamless_sim/godot/scripts/agents/: AgentRenderer.gd  GDScriptAgentSim.gd
seamless_sim/godot/scripts/simulation/: TickBus.gd
seamless_sim/godot/scripts/ui/: DebugHUD.gd  WorldCamera.gd
seamless_sim/godot/scripts/world/: ChunkManager.gd  TerrainGenerator.gd
seamless_sim/rust/: Cargo.toml
seamless_sim/rust/src/: agent_sim.rs  lib.rs  spatial_grid.rs
specs/: AGENT_CHARACTERS.md  EMERGENT_NARRATIVE.md  GOVERNANCE_EMERGENCE.md  LLM_AGENTS.md  POPULATION_ABSTRACTION.md  TECH_STACK.md
